# project-clementine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Utils.h  armor_detect_demo.cpp  cli_parser_demo.cpp  windmill_detect_demo.cpp
doc/: command-line-parsing.md  contour-finding.txt  float-to-chars-fixed.md  image-moments.txt  new-to-tx2.md
